--- a/hr-eureka-server/src/main/resources/application.properties
+++ b/hr-eureka-server/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.application.name=hr-eureka-server
 
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+
+server.port=8761
