--- a/hr-worker/pom.xml
+++ b/hr-worker/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.devsuperior</groupId>
-	<artifactId>hrworker</artifactId>
+	<artifactId>hr-worker</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>hrworker</name>
+	<name>hr-worker</name>
 	<description>Worker Microservice</description>
 
 	<properties>
